tests/should_fail/match_struct_partial_literal.nv
module fail
struct Point { x: Int, y: Int }
// Only one literal arm — not exhaustive
let p = Point(1, 2)
let r = match p {
    Point { x: 1, y } => "one",
}
